logs/validate.20260401-071249.log
warning: using ==> in `assert forall` does not currently assume the antecedent in the body; consider using `implies` instead of `==>`
   --> src/Chap62/StarPartitionMtEph.rs:802:13
    |
802 |             assert forall|j: int| start as int <= j < end as int implies
    |             ^^^^^^
    |
    = help: If you didn't mean to assume the antecedent, we're very curious to hear why! To tell us, please open an issue on the Verus issue tracker on github with the title `Don't always make assert forall assume the antecedent`. If no one opens such an issue, we'll soon change the behavior of Verus to always assume the antecedent of the outermost implication

error[E0596]: cannot borrow `p_vec` as mutable, as it is not declared as mutable
    --> src/Chap62/StarPartitionMtEph.rs:1049:17
     |
1049 |                 p_vec.set(idx as usize, vertex.clone_view());
     |                 ^^^^^ cannot borrow as mutable
     |
help: consider changing this to be mutable
     |
 984 |         let mut p_vec = build_p_vec_mt(vertices_arc.clone(), 0, nv);
     |             +++

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0596`.
Elapsed: 8s
Sampled Memory Usage: peak rust_verify RSS: 11985MB, peak z3 RSS: 0MB, min free: 13721MB
Sampled CPU Usage: rust_verify: 343s, z3 children: 273s
